# Aether

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  README.zh-CN.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: android.yml  ci.yml  ios.yml  macos.yml  python.yml
agent-bindings/: Cargo.toml
agent-bindings/src/: agent.udl  capi.rs  lib.rs  runtime.rs  uniffi.rs  wasm.rs
agent-core/: Cargo.toml
agent-core/src/: agent.rs  breaker.rs  budget.rs  config.rs  context.rs  delegate.rs  error.rs  lib.rs  loop_mod.rs  profile.rs  prompt.rs  tracing.rs
agent-core/src/compression/: mod.rs
agent-core/src/llm/: anthropic.rs  caching.rs  codex.rs  mod.rs  ollama.rs  openai.rs  provider.rs
agent-core/src/mcp/: http.rs  mod.rs  oauth.rs  server.rs
agent-core/src/memory/: core.rs  curator.rs  mod.rs  review.rs  state.rs
agent-core/src/skills/: mod.rs
agent-core/src/tools/: extra_tools.rs  file_tools.rs  memory_tool.rs  mod.rs  registry.rs  skills_tool.rs  terminal_backends.rs  terminal_tool.rs  web_tools.rs
agent-core/src/types/: message.rs  mod.rs  model.rs  tool.rs
agent-core/tests/: e2e_llm.rs  hermes_compat.rs  integration.rs
agent-wasm/: Cargo.toml
agent-wasm/src/: lib.rs
docs/: FIX_PATCH.md  FIX_PATCH.patch  FIX_PLAN.md  M1_HOTFIX.md  V1_ROADMAP.md  android-ai-shell-design.md  devlog.md  getting-started.md  hermes-architecture.md  implementation-plan.md  requirements.md  tasks.md
docs/installation/: linux.md
examples/android-demo/: settings.gradle.kts
examples/android-demo/app/: build.gradle.kts
examples/android-demo/app/src/main/: AndroidManifest.xml
examples/android-demo/app/src/main/java/com/aether/demo/: MainActivity.kt
examples/android-demo/app/src/main/res/layout/: activity_main.xml
examples/android-demo/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
examples/macos-demo/: build.sh  main.swift
scripts/: build-android.sh  build-ios.sh  build-macos.sh  build-windows.ps1  ci-check.sh  self-audit.sh
sdks/android/: build.gradle.kts
sdks/android/src/main/java/aether/: Aether.kt
sdks/android/src/main/java/uniffi/aether/: aether.kt
sdks/dotnet/Aether/: Aether.cs  Aether.csproj
sdks/dotnet/Aether.Tests/: Aether.Tests.csproj  AgentTests.cs
sdks/ios/: FROZEN.md  Package.swift  aether.swift  aetherFFI.h
sdks/ios/Sources/AetherSDK/: Aether.swift
sdks/python/: pyproject.toml
sdks/python/aether/: aether.py
sdks/typescript/: FROZEN.md
sdks/typescript/examples/: index.html
sdks/typescript/src/: index.ts
