[workspace]
resolver = "3"
members = [
    "agent-core",
    "agent-bindings",
    "agent-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aether Contributors"]
license = "MIT"
repository = "https://github.com/foreverxzhh/aether"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
