[workspace]
resolver = "3"
members = [
    "agent-core",
    "agent-bindings",
    # FROZEN(2026-06-16): Web/iOS 支持已冻结，取消此注释即可恢复。
    # "agent-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aether Contributors"]
license = "MIT"
repository = "https://github.com/foreverxzhh/aether"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
