[package]
name = "agent-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
thiserror = "2"
uniffi = { version = "0.31", optional = true, features = ["cli"] }
# FROZEN(2026-06-16): Web/iOS 支持已冻结，取消此注释即可恢复。
# wasm-bindgen = { version = "0.2", optional = true }
# serde-wasm-bindgen = { version = "0.6", optional = true }
# js-sys = { version = "0.3", optional = true }

[features]
default = ["native"]
native = ["agent-core/native"]
cli = ["native"]     # T-1.5: added missing feature for aether binary
uniffi = ["dep:uniffi"]
# FROZEN(2026-06-16): Web/iOS 支持已冻结
# wasm = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys"]
android = ["agent-core/portable-pty"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "aether"
path = "src/bin/cli.rs"
required-features = ["cli"]

