[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform AI Agent SDK — Hermes architecture in Rust. Runs on Android, iOS, Windows, macOS, Linux, Web."
keywords = ["ai", "agent", "llm", "sdk", "cross-platform", "hermes"]
categories = ["development-tools", "api-bindings"]

[dependencies]
# 核心依赖（所有平台通用）
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

# 原生平台依赖
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
futures = { version = "0.3", optional = true }
inventory = { version = "0.3", optional = true }
portable-pty = { version = "0.7", optional = true }
similar = { version = "2", optional = true }
glob = { version = "0.3", optional = true }
scraper = { version = "0.19", optional = true }

[features]
default = ["native"]
native = ["tokio", "reqwest", "rusqlite", "tracing", "tracing-subscriber", "uuid", "futures", "inventory", "portable-pty", "similar", "glob", "scraper"]

[dev-dependencies]
tempfile = "3"
